# gate-renderer

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
examples/: benchmark.py  interactive_viewer.py
src/gaterenderer/: __init__.py  _kernel.py  renderer.py  sample_scene.py  transforms.py
src/gaterenderer/_kernels/: raycast.cpp  raycast.cu
